--- a/assets/styles/layout/_headPassion.scss
+++ b/assets/styles/layout/_headPassion.scss
@@ -12,6 +12,12 @@
         gap: 30px;
         padding: 80px;
 
+        @media screen and (max-width: 1200px) {
+        padding: 60px 20px 20px;
+        text-align: justify;
+
+        }
+
         img {
             width: 100px;
             height: 100px;
