--- a/assets/styles/layout/_header.scss
+++ b/assets/styles/layout/_header.scss
@@ -43,7 +43,14 @@ header {
 
     @media screen and (max-width: 900px) {
         h1 {
-            font-size: 3rem;
+            font-size: 2rem;
+        }
+        h2{
+        font-size: 3rem;
+
+        }
+        h3{
+        font-size: 1rem;
         }
     }
 }
